--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.completed {
+  background-color: #198754 !important; 
+  color: #fff  !important
+}
+.completed-lable {
+  padding: 5px 10px;
+  border-radius: 4px;
+}
